--- a/process_system/Gemfile
+++ b/process_system/Gemfile
@@ -2,6 +2,12 @@ source 'https://rubygems.org'
 
 gem 'rails', '3.2.14'
 
+group :development, :test do
+  gem 'rspec-rails', '2.13.1'
+  gem 'cucumber-rails', :require => false
+  gem 'database_cleaner'
+end
+
 # Bundle edge Rails instead:
 # gem 'rails', :git => 'git://github.com/rails/rails.git'
 
